# quadwar

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  gen_cmake.py  gen_gl.py
.github/workflows/: build.yml
source/quadwar/: CMakeLists.txt  camera.c  camera.h  graphics.c  graphics.h  input.c  input.h  main.c  math.h  options.h  stem.c  stem.h  ui.c  ui.h
source/quadwar/gl/: CMakeLists.txt  decls.inl.h  enums.inl.h  funcs.inl.h  gl.c  gl.h  loads.inl.h  types.inl.h
